Bryk-Jams for Netlify deployment checkpoint

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bloc Jams</title>
+    <title>Bryk Jams</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
@@ -14,7 +14,7 @@
   <body>
     <!-- Top bar -->
     <nav class="navbar">
-      <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
+      <img src="assets/images/bryk_jams_logo.png" alt="bloc jams logo">
     </nav>
 
     <main>
